# incubator-graphar

./: .gitignore
.github/scripts/: update_version.py
.github/workflows/: ci.yml  cli.yml  java.yml  python-wheel-workflow.yml  python.yml  spark.yaml
cli/: CMakeLists.txt
cpp/: CMakeLists.txt
cpp/benchmarks/: arrow_chunk_reader_benchmark.cc
cpp/cmake/: apache-arrow.cmake
cpp/examples/: high_level_writer_example.cc  mid_level_reader_example.cc
cpp/src/: filesystem.cc
cpp/src/graphar/: filesystem.cc  filesystem.h  fwd.h  graph_info.cc  lex_schema_reader.cc  lex_schema_reader.h  writer_util.h
cpp/src/graphar/arrow/: chunk_reader.cc
cpp/src/graphar/high-level/: edges_builder.h  vertices_builder.h
cpp/test/: test_arrow_chunk_writer.cc  test_lex_schema.cc  test_lex_schema_reader.cc
maven-projects/info/: dependency-reduced-pom.xml
maven-projects/info/src/main/java/org/apache/graphar/info/: GraphInfo.java  VertexInfo.java
maven-projects/info/src/main/java/org/apache/graphar/info/saver/: BaseGraphInfoSaver.java
maven-projects/info/src/main/java/org/apache/graphar/info/yaml/: GraphYaml.java  PropertyYaml.java  VertexYaml.java
maven-projects/info/src/test/java/org/apache/graphar/info/: GraphInfoLabelsTest.java  GraphInfoTest.java  MultiPropertyTest.java  TestDataFactory.java  VertexInfoLabelsTest.java
maven-projects/java/: build.xml
maven-projects/java/cmake/: graphar-cpp.cmake
maven-projects/java/src/main/java/org/apache/graphar/graphinfo/: AdjacentList.java  EdgeInfo.java  GraphInfo.java  Property.java  PropertyGroup.java  VertexInfo.java
maven-projects/java/src/main/java/org/apache/graphar/readers/arrowchunk/: AdjListArrowChunkReader.java  AdjListOffsetArrowChunkReader.java  AdjListPropertyArrowChunkReader.java  VertexPropertyArrowChunkReader.java
maven-projects/java/src/main/java/org/apache/graphar/readers/chunkinfo/: AdjListChunkInfoReader.java  AdjListPropertyChunkInfoReader.java  VertexPropertyChunkInfoReader.java
maven-projects/java/src/main/java/org/apache/graphar/stdcxx/: StdSharedPtr.java  StdVector.java
maven-projects/java/src/main/java/org/apache/graphar/util/: CppClassName.java  CppHeaderName.java  GrapharStaticFunctions.java  InfoVersion.java  Result.java
maven-projects/java/src/main/java/org/apache/graphar/writers/: EdgeChunkWriter.java  VertexPropertyWriter.java
maven-projects/java/src/main/java/org/apache/graphar/writers/builder/: EdgesBuilder.java  VerticesBuilder.java
maven-projects/java/src/test/java/org/apache/graphar/edges/: EdgesCollectionTest.java
maven-projects/java/src/test/java/org/apache/graphar/graphinfo/: EdgeInfoTest.java  GraphInfoTest.java  VertexInfoTest.java
maven-projects/java/src/test/java/org/apache/graphar/readers/arrowchunk/: AdjListArrowChunkReaderTest.java  AdjListOffsetArrowChunkReaderTest.java  AdjListPropertyArrowChunkReaderTest.java  VertexPropertyArrowChunkReaderTest.java
maven-projects/java/src/test/java/org/apache/graphar/readers/chunkinfo/: AdjListChunkInfoReaderTest.java  AdjListPropertyChunkInfoReaderTest.java  VertexPropertyChunkInfoReaderTest.java
maven-projects/java/src/test/java/org/apache/graphar/writers/: EdgeChunkWriterTest.java  VertexPropertyWriterTest.java
maven-projects/java/src/test/java/org/apache/graphar/writers/builder/: EdgesBuilderTest.java  VerticesBuilderTest.java
maven-projects/spark/datasources-35/: pom.xml
python/: CMakeLists.txt  Makefile  README.md  pyproject.toml
